syntax = "proto3";
package config.v1alpha1;

// import "google/protobuf/duration.proto";
// import "google/protobuf/empty.proto";

option go_package = "github.com/otelfleet/otelfleet/pkg/api/agents/v1alpha1";

service AgentService {
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsReponse);
  rpc GetAgent(GetAgentRequest) returns (GetAgentResponse);
  rpc Status(GetAgentStatusRequest) returns (AgentStatus);
}

message ListAgentsRequest {
  bool withStatus = 1;
}

message ListAgentsReponse {
  repeated AgentDescriptionAndStatus agents = 1;
}

message AgentDescriptionAndStatus {
  AgentDescription agent  = 1;
  AgentStatus      status = 2;
}

message GetAgentRequest {}

message GetAgentResponse {}

message GetAgentStatusRequest {}

message AgentDescription {
  string id           = 1;
  string friendlyName = 2;
}

message AgentStatus {
  AgentState state = 1;
}

enum AgentState {
  AgentStateUnknown      = 0;
  AgentStateConnected    = 1;
  AgentStateDisconnected = 2;
}
