syntax = "proto3";
package bootstrap.v1alpha1;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "pkg/api/config/v1alpha1/config.proto";

option go_package = "github.com/otelfleet/otelfleet/pkg/api/bootstrap/v1alpha1;v1alpha1";

service TokenService {
  rpc CreateToken(CreateTokenRequest) returns (BootstrapToken);
  rpc ListTokens(google.protobuf.Empty) returns (ListTokenReponse);
  rpc DeleteToken(DeleteTokenRequest) returns (google.protobuf.Empty);
  rpc Signatures(google.protobuf.Empty) returns (SignatureResponse);

  rpc GetBootstrapConfig(GetConfigRequest) returns (GetConfigResponse);
}

message GetConfigRequest {
  string tokenID = 1;
}

message GetConfigResponse {
  config.v1alpha1.Config config = 1;
}

service BootstrapService {
  rpc Bootstrap(BootstrapAuthRequest) returns (BootstrapAuthResponse);
}

message BootstrapAuthRequest {
  string clientId     = 1;
  string name         = 2;
  bytes  clientPubKey = 3;
}

message BootstrapAuthResponse {
  bytes serverPubKey = 1;
}

message BootstrapToken {
  string                             ID     = 1;
  string                             Secret = 2;
  google.protobuf.Duration           TTL    = 3;
  optional google.protobuf.Timestamp Expiry = 4;
  // TODO: eventually this will be insufficient, should refactor to a message ConfigReference in config.proto
  optional string     configReference = 5;
  map<string, string> labels          = 6;
}

message ListTokenReponse {
  repeated BootstrapToken tokens = 1;
}

message CreateTokenRequest {
  google.protobuf.Duration TTL             = 1;
  optional string          configReference = 2;
  map<string, string>      labels          = 3;
}

message DeleteTokenRequest {
  string ID = 1;
}

message SignatureResponse {
  map<string, bytes> signatures = 1;
}

message BootstrapRequest {
  string ID           = 1;
  string name         = 2;
  bytes  clientPubKey = 3;
}
